Restored OS threads