@@ -36,7 +36,6 @@ import java.util.Vector;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
-import java.util.concurrent.Semaphore;
 
 import javax.xml.parsers.ParserConfigurationException;
 
@@ -124,10 +123,10 @@ public class DitaMap2Xliff {
 					}
 				} catch (NumberFormatException e) {
 					// Use default if invalid
-					maxThreads = 16;
+					maxThreads = Runtime.getRuntime().availableProcessors();
 				}
 			} else {
-				maxThreads = 16;
+				maxThreads = Runtime.getRuntime().availableProcessors();
 			}
 			params.put("maxThreads", String.valueOf(maxThreads));
 
@@ -290,26 +289,12 @@ public class DitaMap2Xliff {
 		String maxThreadsParam = params.get("maxThreads");
 		int maxThreads = Integer.parseInt(maxThreadsParam);
 
-		// Use virtual threads with semaphore to limit concurrency
-		Semaphore concurrencyLimit = new Semaphore(maxThreads);
-		try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
+		try (ExecutorService executor = Executors.newFixedThreadPool(maxThreads)) {
 			List<Future<ProcessingResult>> futures = new ArrayList<>();
 
 			for (String file : filesMap) {
 				Future<ProcessingResult> future = executor.submit(() -> {
-					try {
-						// Acquire permit to limit concurrency
-						concurrencyLimit.acquire();
-						try {
-							return convertSingleFile(file, params, catalog, skeleton);
-						} finally {
-							// Always release permit
-							concurrencyLimit.release();
-						}
-					} catch (InterruptedException ex) {
-						Thread.currentThread().interrupt();
-						return new ProcessingResult("Interrupted: " + ex.getMessage());
-					}
+					return convertSingleFile(file, params, catalog, skeleton);
 				});
 				futures.add(future);
 			}
