@@ -27,7 +27,6 @@ import java.util.Vector;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
-import java.util.concurrent.Semaphore;
 
 import javax.xml.parsers.ParserConfigurationException;
 
@@ -129,33 +128,19 @@ public class Xliff2DitaMap {
 				}
 			} catch (NumberFormatException e) {
 				// Use default if invalid
-				maxThreads = 16;
+				maxThreads = Runtime.getRuntime().availableProcessors();
 			}
 		} else {
-			maxThreads = 16;
+			maxThreads = Runtime.getRuntime().availableProcessors();
 		}
 		params.put("maxThreads", String.valueOf(maxThreads));
 
-		// Use virtual threads with semaphore to limit concurrency
-		Semaphore concurrencyLimit = new Semaphore(maxThreads);
-		try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
+		try (ExecutorService executor = Executors.newFixedThreadPool(maxThreads)) {
 			List<Future<ProcessingResult>> futures = new ArrayList<>();
 
 			for (String topicFile : topicFiles) {
 				Future<ProcessingResult> future = executor.submit(() -> {
-					try {
-						// Acquire permit to limit concurrency
-						concurrencyLimit.acquire();
-						try {
-							return mergeSingleFile(topicFile, params, outputFile, fileCount, tgtlang, catalog);
-						} finally {
-							// Always release permit
-							concurrencyLimit.release();
-						}
-					} catch (InterruptedException ex) {
-						Thread.currentThread().interrupt();
-						return new ProcessingResult("Interrupted: " + ex.getMessage());
-					}
+					return mergeSingleFile(topicFile, params, outputFile, fileCount, tgtlang, catalog);
 				});
 				futures.add(future);
 			}
